--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="shortcut icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/font.css">
         <link rel="stylesheet" href="css/main.css">
+        <!--[if lt IE 9]>
+            <script src="js/respond.min.js"></script>
+        <![endif]-->
     </head>
     <body>  
         <div id="nav">
@@ -23,16 +26,17 @@
                                 <a href="#aboutMe">关于我</a>
                             </li>
                             <li>
-                                <a href="#experience">个人经历</a>
+                                <a href="#experienceTar">个人经历</a>
                             </li>
                             <li>
-                                <a href="#skills">IT技能</a>
+                                <a href="#skillsTar">IT技能</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
+        
         <div id="aboutMe">
             <div class="content">
                 <h1><i class="icon-circle icon-info"></i>关于我</h1>
@@ -41,7 +45,7 @@
                 <p>不足：社交与口头表达能力还有待加强。</p>
                 <div class="clearfix introduce">
                     <div class="pull-left photo">
-                        <img src="img/head.png" alt=""/>
+                        <img src="img/head.jpg" alt=""/>
                     </div>
                     <div class="pull-right info">
                         <dl class="dl-horizontal">
@@ -63,6 +67,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="experienceTar">
         </div>
         <div id="experience">
             <div class="content">
@@ -121,6 +127,8 @@
                     </li>
                 </ul>
             </div>
+        </div>
+         <div id="skillsTar">
         </div>
         <div id="skills">
             <div class="content">
