--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <nav class="menu">
                          <ul class="list-inline">
                             <li class="active">
-                                <a href="#aboutMe">关于我</a>
+                                <a href="#about-me">关于我</a>
                             </li>
                             <li>
-                                <a href="#experienceTar">个人经历</a>
+                                <a href="#experience-tar">个人经历</a>
                             </li>
                             <li>
-                                <a href="#skillsTar">IT技能</a>
+                                <a href="#skills-tar">IT技能</a>
                             </li>
                         </ul>
                     </nav>
@@ -37,7 +37,7 @@
             </div>
         </div>
         
-        <div id="aboutMe">
+        <div id="about-me">
             <div class="content">
                 <h1><i class="icon-circle icon-info"></i>关于我</h1>
                 <p>一年半Web前端工作经验，热爱web前端，喜欢看书、听音乐、打羽毛球。</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div id="experienceTar">
+        <div id="experience-tar">
         </div>
         <div id="experience">
             <div class="content">
@@ -103,14 +103,20 @@
                 <ul class="project">
                     <li>
                         <p><i class="icon icon-github"></i>Adchina DSP</p>
-                        <p>2013/11-2014/1</p>
+                        <p>2014/01-至今</p>
                         <p>该项目是一个多屏整合需求方平台，将分散在各个媒体平台的广告资源整合，为广告主实现精准广告投放。该项目由团队合作完成，其中我负责广告主管理、订单管理以及数据管理模块的前端工作。</p>
                         <p>基于Microsoft Visual Studio 2010，使用的技术为html、css、jquery、Ace。</p>
                     </li>
                     <li>
+                        <p><i class="icon icon-github"></i>Mobile DSP Demo</p>
+                        <p>2013/11-2013/12</p>
+                        <p>该项目是移动广告需求方平台，提供多种广告创意形式，支持分类广告投放，满足广告主不同推广需求。该项目由我一人负责前端UI以及前后台交互。</p>
+                        <p>基于Microsoft Visual Studio 2010，使用的技术为html、css、jquery、bootstrap3。</p>
+                    </li>
+                    <li>
                         <p><i class="icon icon-github"></i><a href="http://www.adchina.com" target="_blank">Adchina官网</a></p>
-                        <p>2013/9-2013/10</p>
-                        <p>该项目为Adchina公司官网，用于全面介绍公司以及公司产品，由我一人负责前端工作。</p>
+                        <p>2013/09-2013/10</p>
+                        <p>该项目为Adchina公司官网，用于全面介绍公司以及公司产品，由我一人负责前端开发工作以及后期维护。</p>
                         <P>基于Microsoft Visual Studio 2010，使用的技术为html5、css、jquery，兼容ie6+、chrome、firefox。</p>
                     </li>
                     <li>
@@ -128,7 +134,7 @@
                 </ul>
             </div>
         </div>
-         <div id="skillsTar">
+         <div id="skills-tar">
         </div>
         <div id="skills">
             <div class="content">
@@ -152,7 +158,7 @@
                             <span>Bootstrap</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 60%;">
+                            <div class="progress-bar" style="width: 70%;">
                             </div>
                             <span>Jquery</span>
                         </div>
@@ -160,6 +166,11 @@
                             <div class="progress-bar" style="width: 50%;">
                             </div>
                             <span>Less</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 30%;">
+                            </div>
+                            <span>AngularJS</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" style="width: 20%;">
