--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li>
                         <span class="time">2013/7-至今</span>
                         <span class="job">前端开发工程师</span>
-                        <span class="company gray">易传媒</span>
+                        <span class="company gray"><a href="http://www.adchina.com/" target="_blank">易传媒</a></span>
                     </li>
                     <li>
                         <span class="time">2012/12-2013/5</span>
@@ -102,9 +102,21 @@
                 <h2><i class="icon-plus icon"></i>项目经验</h2>
                 <ul class="project">
                     <li>
-                        <p><i class="icon icon-github"></i>Adchina DSP</p>
+                        <p><i class="icon icon-github"></i>TradingOS</p>
+                        <p>2014/08-至今</p>
+                        <p>该项目是为直客、媒体、电商电台搭建互联网广告交易基础架构的一个交易操作系统平台。该项目由团队合作完成，其中我负责参与前端框架、控件库的搭建以及资源管理、订单管理、数据管理模块的前端工作。</p>
+                        <p>基于eclipse，使用的技术为html5、css、less、jquery、angularjs、bootstrap3。</p>
+                    </li>
+                    <li>
+                        <p><i class="icon icon-github"></i>TradingOS官网</p>
+                        <p>2014/09-至今</p>
+                        <p>该项目是TradingOS的宣传官网，用于介绍公司的最新产品TradingOS系统。</p>
+                        <p>基于Microsoft Visual Studio 2010，使用的技术为html5、css、jquery，兼容ie6+、chrome、firefox等主流浏览器。</p>
+                    </li>
+                    <li>
+                        <p><i class="icon icon-github"></i>Menlo DSP</p>
                         <p>2014/01-至今</p>
-                        <p>该项目是一个多屏整合需求方平台，将分散在各个媒体平台的广告资源整合，为广告主实现精准广告投放。该项目由团队合作完成，其中我负责广告主管理、订单管理以及数据管理模块的前端工作。</p>
+                        <p>该项目是为代理商服务的企业级DSP产品，对接多种媒体资源平台，整合了展示、移动、视频三大类广告渠道，为广告主实现精准广告投放。该项目前期由团队合作完成，其中我负责广告主管理、订单管理、媒体资源以及数据管理模块的前端工作，后期由我负责整个项目新功能以及换肤的前端工作。</p>
                         <p>基于Microsoft Visual Studio 2010，使用的技术为html、css、jquery、Ace。</p>
                     </li>
                     <li>
@@ -117,17 +129,17 @@
                         <p><i class="icon icon-github"></i><a href="http://www.adchina.com" target="_blank">Adchina官网</a></p>
                         <p>2013/09-2013/10</p>
                         <p>该项目为Adchina公司官网，用于全面介绍公司以及公司产品，由我一人负责前端开发工作以及后期维护。</p>
-                        <P>基于Microsoft Visual Studio 2010，使用的技术为html5、css、jquery，兼容ie6+、chrome、firefox。</p>
+                        <P>基于Microsoft Visual Studio 2010，使用的技术为html5、css、jquery，兼容ie6+、chrome、firefox等主流浏览器。</p>
                     </li>
                     <li>
                         <p><i class="icon icon-github"></i> <a href="http://www.nutribenchina.com" target="_blank">Nutriben官方网站</a></p>
-                        <p>2013/04--2013/05</p>
+                        <p>2013/04-2013/05</p>
                         <P>该项目是为了展示产品，在开发过程中，我负责与客户及设计师沟通，并参与页面的设计与实现。</p>
                         <p>基于Microsoft Visual Studio 2012，使用的技术为Html、less、Jquery、bootstrap2.3。</p>
                     </li>
                     <li>
                         <p><i class="icon icon-github"></i>Lumi.B2B</p>
-                        <p>2012/12---2013/01  </p>
+                        <p>2012/12-2013/01</p>
                         <P>该项目是为了管理Lumi和分销商交易过程中产生的订单、发票和收款信息，在开发过程中，我负责订单模块组件的编写。</p>
                         <p>基于Microsoft Visual Studio 2012，使用的技术为 Html、CSS、ExtJS。</p>
                     </li>
@@ -143,32 +155,32 @@
                     <div class="pull-left info">
                         <h2>前端</h2>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 70%;">
+                            <div class="progress-bar" style="width: 80%;">
                             </div>
                             <span>Html</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 70%;">
+                            <div class="progress-bar" style="width: 80%;">
                             </div>
                             <span>CSS</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 70%;">
+                            <div class="progress-bar" style="width: 80%;">
                             </div>
                             <span>Bootstrap</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 70%;">
+                            <div class="progress-bar" style="width: 80%;">
                             </div>
                             <span>Jquery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 50%;">
+                            <div class="progress-bar" style="width: 70%;">
                             </div>
                             <span>Less</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 30%;">
+                            <div class="progress-bar" style="width: 50%;">
                             </div>
                             <span>AngularJS</span>
                         </div>
@@ -181,13 +193,13 @@
                     <div class="pull-right info">
                         <h2>图片处理</h2>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 40%;">
+                            <div class="progress-bar" style="width: 50%;">
                             </div>
                             <span>Photoshop</span>
                         </div>
                         <h2>后台交互</h2>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 20%;">
+                            <div class="progress-bar" style="width: 30%;">
                             </div>
                             <span>Java/C#</span>
                         </div>
