更新简历 更新了index

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
                 <h2><i class="icon-plus icon"></i>工作经历</h2>
                 <ul>
                     <li>
-                        <span class="time">2013/7-至今</span>
+                        <span class="time">2014/11-至今</span>
+                        <span class="job">web前端工程师</span>
+                        <span class="company gray">饿了么</span>
+                    </li>
+                    <li>
+                        <span class="time">2013/7-2014/10</span>
                         <span class="job">前端开发工程师</span>
                         <span class="company gray"><a href="http://www.adchina.com/" target="_blank">易传媒</a></span>
                     </li>
@@ -103,7 +108,7 @@
                 <ul class="project">
                     <li>
                         <p><i class="icon icon-github"></i>TradingOS</p>
-                        <p>2014/08-至今</p>
+                        <p>2014/08-2014/10</p>
                         <p>该项目是为直客、媒体、电商电台搭建互联网广告交易基础架构的一个交易操作系统平台。该项目由团队合作完成，其中我负责参与前端框架、控件库的搭建以及资源管理、订单管理、数据管理模块的前端工作。</p>
                         <p>基于eclipse，使用的技术为html5、css、less、jquery、angularjs、bootstrap3。</p>
                     </li>
