--- a/index.html
+++ b/index.html
@@ -107,28 +107,40 @@
                 <h2><i class="icon-plus icon"></i>项目经验</h2>
                 <ul class="project">
                     <li>
+                        <p>
+                            <i class="icon icon-github"></i>
+                            <a href="http://ele.me" target="_blank">饿了么订餐平台</a>
+                        </p>
+                        <p>2014/11-至今</p>
+                        <p>该项目为饿了么网上订餐平台。</p>
+                        <p>基于php，使用的技术为html5、sass、angularjs、bootstrap3。</p>
+                    </li>
+                    <li>
+                        <p>
+                            <i class="icon icon-github"></i>
+                            <a href="http://m.ele.me/" target="_blank">饿了么移动端订餐平台</a>
+                        </p>
+                        <p>2014/11-至今</p>
+                        <p>该项目为饿了么移动端网上订餐平台。</p>
+                        <p>基于php，使用的技术为html5、sass、angularjs。</p>
+                    </li>
+                    <li>
                         <p><i class="icon icon-github"></i>TradingOS</p>
-                        <p>2014/08-2014/10</p>
+                        <p>2014/08-2014/11</p>
                         <p>该项目是为直客、媒体、电商电台搭建互联网广告交易基础架构的一个交易操作系统平台。该项目由团队合作完成，其中我负责参与前端框架、控件库的搭建以及资源管理、订单管理、数据管理模块的前端工作。</p>
-                        <p>基于eclipse，使用的技术为html5、css、less、jquery、angularjs、bootstrap3。</p>
+                        <p>基于java，使用的技术为html5、css、less、jquery、angularjs、bootstrap3。</p>
                     </li>
                     <li>
                         <p><i class="icon icon-github"></i>TradingOS官网</p>
-                        <p>2014/09-至今</p>
+                        <p>2014/09-2014/09</p>
                         <p>该项目是TradingOS的宣传官网，用于介绍公司的最新产品TradingOS系统。</p>
                         <p>基于Microsoft Visual Studio 2010，使用的技术为html5、css、jquery，兼容ie6+、chrome、firefox等主流浏览器。</p>
                     </li>
                     <li>
                         <p><i class="icon icon-github"></i>Menlo DSP</p>
-                        <p>2014/01-至今</p>
+                        <p>2013/11-2014/07</p>
                         <p>该项目是为代理商服务的企业级DSP产品，对接多种媒体资源平台，整合了展示、移动、视频三大类广告渠道，为广告主实现精准广告投放。该项目前期由团队合作完成，其中我负责广告主管理、订单管理、媒体资源以及数据管理模块的前端工作，后期由我负责整个项目新功能以及换肤的前端工作。</p>
                         <p>基于Microsoft Visual Studio 2010，使用的技术为html、css、jquery、Ace。</p>
-                    </li>
-                    <li>
-                        <p><i class="icon icon-github"></i>Mobile DSP Demo</p>
-                        <p>2013/11-2013/12</p>
-                        <p>该项目是移动广告需求方平台，提供多种广告创意形式，支持分类广告投放，满足广告主不同推广需求。该项目由我一人负责前端UI以及前后台交互。</p>
-                        <p>基于Microsoft Visual Studio 2010，使用的技术为html、css、jquery、bootstrap3。</p>
                     </li>
                     <li>
                         <p><i class="icon icon-github"></i><a href="http://www.adchina.com" target="_blank">Adchina官网</a></p>
@@ -172,7 +184,7 @@
                         <div class="progress">
                             <div class="progress-bar" style="width: 80%;">
                             </div>
-                            <span>Bootstrap</span>
+                            <span>Less/Sass</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" style="width: 80%;">
@@ -182,12 +194,12 @@
                         <div class="progress">
                             <div class="progress-bar" style="width: 70%;">
                             </div>
-                            <span>Less</span>
+                            <span>AngularJS</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 50%;">
+                            <div class="progress-bar" style="width: 90%;">
                             </div>
-                            <span>AngularJS</span>
+                            <span>Bootstrap</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" style="width: 20%;">
