更新工作年限

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="about-me">
             <div class="content">
                 <h1><i class="icon-circle icon-info"></i>关于我</h1>
-                <p>一年半Web前端工作经验，热爱web前端，喜欢看书、听音乐、打羽毛球。</p>
+                <p>两年Web前端工作经验，热爱web前端，喜欢看书、听音乐、打羽毛球。</p>
                 <p>优点：上进努力，具有高度的责任感，为人和睦，有较强的分析问题解决问题的能力，能顾全大局，具有团队合作精神，做事力求完美。</p>
                 <p>不足：社交与口头表达能力还有待加强。</p>
                 <div class="clearfix introduce">
